--- a/.air.conf
+++ b/.air.conf
@@ -1,9 +1,9 @@
-root = "guppy-rest/src" 
-watch_dir = "guppy-rest/src"
+root = "src" 
+watch_dir = "src"
 tmp_dir = "tmp"
 
 [build]
-cmd = "go build -o ./tmp/main guppy-rest/src/main.go"
+cmd = "go build -o ./tmp/main src/main.go"
 bin = "tmp/main"
 log = "air_errors.log"
 include_ext = ["go", "tpl", "tmpl", "html"]
