--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,48 @@
 version: "3.2"
 
 services:
+    etcd1:
+        image: bitnami/etcd:3
+        ports:
+          - 2379:2379
+        environment:
+          - ALLOW_NONE_AUTHENTICATION=yes
+          - ETCD_NAME=etcd1
+          - ETCD_INITIAL_ADVERTISE_PEER_URLS=http://etcd1:2380
+          - ETCD_LISTEN_PEER_URLS=http://0.0.0.0:2380
+          - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
+          - ETCD_ADVERTISE_CLIENT_URLS=http://etcd1:2379
+          - ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster
+          - ETCD_INITIAL_CLUSTER=etcd1=http://etcd1:2380,etcd2=http://etcd2:2380,etcd3=http://etcd3:2380
+          - ETCD_INITIAL_CLUSTER_STATE=new
+    etcd2:
+        image: bitnami/etcd:3
+        ports:
+          - 2379:2379
+        environment:
+          - ALLOW_NONE_AUTHENTICATION=yes
+          - ETCD_NAME=etcd2
+          - ETCD_INITIAL_ADVERTISE_PEER_URLS=http://etcd2:2380
+          - ETCD_LISTEN_PEER_URLS=http://0.0.0.0:2380
+          - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
+          - ETCD_ADVERTISE_CLIENT_URLS=http://etcd2:2379
+          - ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster
+          - ETCD_INITIAL_CLUSTER=etcd1=http://etcd1:2380,etcd2=http://etcd2:2380,etcd3=http://etcd3:2380
+          - ETCD_INITIAL_CLUSTER_STATE=new
+    etcd3:
+        image: bitnami/etcd:3
+        ports:
+          - 2379:2379
+        environment:
+          - ALLOW_NONE_AUTHENTICATION=yes
+          - ETCD_NAME=etcd3
+          - ETCD_INITIAL_ADVERTISE_PEER_URLS=http://etcd3:2380
+          - ETCD_LISTEN_PEER_URLS=http://0.0.0.0:2380
+          - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
+          - ETCD_ADVERTISE_CLIENT_URLS=http://etcd3:2379
+          - ETCD_INITIAL_CLUSTER_TOKEN=etcd-cluster
+          - ETCD_INITIAL_CLUSTER=etcd1=http://etcd1:2380,etcd2=http://etcd2:2380,etcd3=http://etcd3:2380
+          - ETCD_INITIAL_CLUSTER_STATE=new
     guppy:
         build: .
         restart: always
@@ -11,7 +53,7 @@ services:
             - SERVER_PORT=3000
             - SERVER_TIMEZONE=Asia/Jakarta
             - SWAGGER_SERVER_ADDRESS=http://0.0.0.0
-            - OS_URLS=localhost:32771,localhost:32772,localhost:32773
+            - OS_URLS=etcd1:2379,etcd2:2379,etcd3:2379
             - OS_DIAL_TIMEOUT=5
             - PASSPHRASE=z4yH36a6zerhfE5427ZV
         command: air
